<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
            android:id="@+id/detail_product_barcode"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_height="44dp"
            android:textColor="#626262"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/order_detail_product_number"
            />
    <TextView
            android:id="@+id/detail_product_name"
            android:layout_width="0dp"
            android:layout_weight="2.7"
            android:layout_height="44dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:text="@string/order_detail_product_name"
            />
    <TextView
            android:id="@+id/detail_product_price"
            android:layout_width="0dp"
            android:layout_weight="1.8"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="@string/order_detail_product_price"
            />
    <TextView
            android:id="@+id/detail_product_num"
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:layout_height="44dp"
            android:textColor="#626262"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/order_detail_product_num"
            />

    <TextView
            android:id="@+id/detail_product_cost"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="44dp"
            android:textColor="#626262"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/order_detail_product_cost"
            />
</LinearLayout>