<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
            android:id="@+id/order_item_number"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="58dp"
            android:textColor="#626262"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/order_search_item_number"
            />
    <TextView
            android:id="@+id/order_item_pos_number"
            android:layout_width="0dp"
            android:layout_weight="2.6"
            android:layout_height="58dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:text="@string/order_search_item_posnumber"
            />
    <TextView
            android:id="@+id/order_item_money"
            android:layout_width="0dp"
            android:layout_weight="2.6"
            android:layout_height="58dp"
            android:gravity="center_vertical"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="@string/order_search_item_money"
            />
    <TextView
            android:id="@+id/order_item_status"
            android:layout_width="0dp"
            android:layout_weight="1.7"
            android:layout_height="58dp"
            android:textColor="#626262"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/order_search_item_status"
            />
</LinearLayout>