<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
        >

    <TextView
            android:id="@+id/tv_storage_number"
            android:layout_width="0dp"
            android:layout_weight="2.8"
            android:layout_height="50dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="055234422"
            android:gravity="center_vertical"
            />
    <TextView
            android:id="@+id/tv_storage_date"
            android:layout_width="0dp"
            android:layout_weight="2.2"
            android:layout_height="50dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="@string/storage_date"
            android:gravity="center_vertical"
            />
    <TextView
            android:id="@+id/tv_storage_purchasing_cost"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="@string/storage_purchasing_cost"
            android:gravity="center_vertical"
            />
    <TextView
            android:id="@+id/tv_storage_gross_goods"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="50dp"
            android:textColor="#626262"
            android:textSize="12sp"
            android:text="@string/storage_gross_goods"
            android:gravity="center_vertical"
            />
    <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            >
        <TextView
                android:id="@+id/prompt_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#626262"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:textSize="12sp"
                android:text="%"
                />
        <TextView
                android:id="@+id/tv_storage_gross_profit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/prompt_profit"
                android:layout_toLeftOf="@id/prompt_profit"
                android:textColor="#626262"
                android:textSize="12sp"
                android:text="@string/storage_gross_profit"
                android:gravity="center_vertical"
                />
    </RelativeLayout>
</LinearLayout>