<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="#EAEAEA"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_centerInParent="true"
                android:background="@drawable/bg_white_et"
                android:gravity="center_vertical"
                >
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_search"
                    />
            <EditText
                    android:id="@+id/et_input_storage_number"
                    android:layout_marginLeft="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:background="@null"
                    android:textColor="#595959"
                    android:textColorHint="#CCCCCC"
                    android:textSize="10dp"
                    android:hint="@string/storage_search_number"
                    />

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            >
        <TextView
                android:layout_width="0dp"
                android:layout_weight="2.8"
                android:layout_height="match_parent"
                android:textColor="#626262"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:text="@string/storage_number"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="2.2"
                android:layout_height="match_parent"
                android:textColor="#626262"
                android:textSize="14sp"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:text="@string/storage_date"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:textColor="#626262"
                android:textSize="14sp"
                android:text="@string/storage_purchasing_cost"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:textColor="#626262"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:text="@string/storage_gross_goods"
                />
        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textColor="#626262"
                android:gravity="bottom"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:text="@string/storage_gross_profit"
                />
    </LinearLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA"
            />
    <com.clinkworld.pay.views.PullRefreshListView
            android:id="@+id/storage_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="false"
            android:divider="@drawable/dotted_line"
            android:layerType="software"
            android:dividerHeight="2dp"
            android:scrollbars="none"
            />
</LinearLayout>