<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="#00000000"
                android:layout_alignParentBottom="true">


    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="75dp"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:background="@drawable/dlg_btn1_bg">
        <Button
                android:id="@+id/btn_not_limited"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/coupons_choose_number_not_limited"
                android:textSize="16sp"
                android:textColor="#0099ff"
                android:background="@null"
                />
        <Button
                android:id="@+id/btn_define"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/coupons_choose_number_define"
                android:textSize="16sp"
                android:textColor="#0099ff"
                android:background="@null"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/cancel_ll"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/dlg_btn2_bg"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">
        <Button
                android:id="@+id/cancel_btn"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="#0099ff"
                android:background="@drawable/bg_dlg_but_selector"/>
    </LinearLayout>

</RelativeLayout>