<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="14dp"
              android:background="#FAFAFA">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:textSize="15sp"
            android:textColor="#626262"
            android:text="@string/link_coupons_title"
            />

    <TextView
            android:id="@+id/tv_link_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="#626262"
            />

    <Button
            android:id="@+id/btn_copy_link_url"
            android:layout_width="75dp"
            android:layout_height="27dp"
            android:layout_marginTop="13dp"
            android:text="@string/link_coupons_copy_btn"
            android:textColor="#595959"
            android:textSize="11sp"
            android:gravity="center"
            android:background="@drawable/bg_frame"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="15sp"
            android:textColor="#626262"
            android:text="@string/link_coupons_share"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            >
        <ImageView
                android:id="@+id/iv_share_weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_weixin"
                />

        <ImageView
                android:id="@+id/iv_share_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_friends"
                android:layout_marginLeft="28dp"
                />

        <ImageView
                android:id="@+id/iv_share_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_sina"
                android:layout_marginLeft="28dp"
                />

        <ImageView
                android:id="@+id/iv_share_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_share_qq"
                android:layout_marginLeft="28dp"
                />

    </LinearLayout>

</LinearLayout>